# Full-Stack-Todo-App

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/database/: database.py
backend/app/models/: models.py
backend/tests/: test_main.py
frontend/: package-lock.json  package.json
frontend/src/actions/: actions.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AddTask.tsx  SubmitButton.tsx  Task.tsx  TodoTable.tsx  ToolTip.tsx
frontend/src/components/ui/: Modal.tsx
